Add configuration and utility classes for managing bot channels and settings